# sdl3_template

./: .clang-format  .clang-tidy  .cmake-format.yml  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.gradle  build_android.bat  build_android.sh  build_ios.sh  cmake-format.yaml
.github/workflows/: android-build.yml  build.yml  web-build.yml
android-project/app/: build.gradle
assets/: monogram_license.txt
cmake/: CPM.cmake  android.cmake  ios.cmake  linux.cmake  macos.cmake  web.cmake  windows.cmake
config/: README.md  config-ios-xcode.sh  config-iossimulator-xcode.sh  config-mac-xcode.sh  config-unix.sh  config-web-unix.sh  config-web-win.bat  config-win.bat  open-web.bat  open-web.sh
src/: Info.plist.in  build.gradle  main.c  main.cpp  minshell.html  pre.js.in
